--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mathjax3-react": "^1.0.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
